Minor bug fix with CSV

--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
         var lines = csv.split("\n");
         var result = [];
         var headers = lines[0].split(",");
-        for (var i = 1; i < lines.length; i++) {
+        for (var i = 1; i <= lines.length; i++) {
             var obj = [];
             var currentline = lines[i].split(",");
             for (var j = 0; j < headers.length; j++) {
