Add link to submit bugs

--- a/index.html
+++ b/index.html
@@ -75,7 +75,9 @@
         </div>
     </div>
     <div style="height:30px;"></div>
-    <div style="text-align:center;">Source: <a href="https://github.com/jakebathman/Markdown-Table-Generator" target="_blank">github.com/jakebathman/Markdown-Table-Generator</a></div>
+    <div style="text-align:center;"><a href="https://github.com/jakebathman/Markdown-Table-Generator/issues/new" target="_blank">Report a bug (GitHub account required)</a></div>
+    <br />
+    <div style="text-align:center;"><a href="https://github.com/jakebathman/Markdown-Table-Generator" target="_blank">Source Code</a></div>
     <!-- Local jQuery file included, but switch the comments below to load from Google's jQuery CDN instead -->
     <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
     <script src="js/jquery-2.1.4.min.js"></script>
